// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3rd state 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <Checkbox
    aria-invalid={false}
    aria-label="check"
    className=""
    id="check"
    isChecked={null}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</label>
`;

exports[`controlled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <Checkbox
    aria-invalid={false}
    aria-label="check"
    defaultChecked={true}
    disabled={false}
    id="check"
    isChecked={true}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</label>
`;

exports[`isDisabled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <Checkbox
    aria-invalid={false}
    aria-label="check"
    defaultChecked={null}
    disabled={true}
    id="check"
    isChecked={false}
    isDisabled={true}
    isValid={true}
    onChange={[Function]}
  />
</label>
`;

exports[`passing HTML attribute 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <Checkbox
    aria-invalid={false}
    aria-label="check"
    aria-labelledby="labelId"
    defaultChecked={true}
    disabled={false}
    id="check"
    isChecked={true}
    isDisabled={false}
    isValid={true}
    label="label"
    onChange={[Function]}
  />
</label>
`;

exports[`passing class 1`] = `
<label
  className="pf-c-dropdown__toggle-check class-123"
  htmlFor="check"
>
  <Checkbox
    aria-invalid={false}
    aria-label="check"
    defaultChecked={true}
    disabled={false}
    id="check"
    isChecked={true}
    isDisabled={false}
    isValid={true}
    label="label"
    onChange={[Function]}
  />
</label>
`;

exports[`uncontrolled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <Checkbox
    aria-invalid={false}
    aria-label="check"
    defaultChecked={null}
    disabled={false}
    id="check"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</label>
`;

exports[`with text 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    defaultChecked={null}
    disabled={true}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="pf-c-dropdown__toggle-text"
    id="check-text"
  >
    Some text
  </span>
</label>
`;
